imagenes para demo

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </div>
     <div class='panel'>
       <div>
-        <img src='http://192.168.1.11/ucore/uploads/products/1.jpg' />
+        <img src='upload/products/1.jpg' />
       </div>
     </div>
     <div class='panel'>
       <div>
-        <img src='http://192.168.1.11/ucore/uploads/products/2.jpg' />
+        <img src='upload/products/2.jpg' />
       </div>
     </div>
     <div class='panel'>
       <div>
-        <img src='http://192.168.1.11/ucore/uploads/products/3.jpg' />
+        <img src='upload/products/3.jpg' />
       </div>
     </div>
     <div class='panel'>
       <div>
-        <img src='http://192.168.1.11/ucore/uploads/products/4.jpg' />
+        <img src='upload/products/4.jpg' />
       </div>
     </div>
     <div class='panel'>
