--- a/index.html
+++ b/index.html
@@ -9,33 +9,40 @@
 </head>
 <body class='main'>
   <div id='panels'>
-    <div class='panel'>
+    <div class='panel' id='home'>
       <div class='content'>
         <h2>Pink Floyd</h2>
         <h3>1965 - 1995</h3>
+        <a href='' rel='form'>Subscripcion</a>
+        <a href='' rel='panel1'>Siguiente</a>
       </div>
     </div>
-    <div class='panel'>
+    <div class='panel' id='panel1'>
       <div>
+        <a href='' rel='panel2'>Siguiente</a>
         <img src='upload/products/1.jpg' />
       </div>
     </div>
-    <div class='panel'>
+    <div class='panel' id='panel2'>
       <div>
+        <a href='' rel='panel3'>Siguiente</a>
         <img src='upload/products/2.jpg' />
       </div>
     </div>
-    <div class='panel'>
+    <div class='panel' id='panel3'>
       <div>
+        <a href='' rel='panel4'>Siguiente</a>
         <img src='upload/products/3.jpg' />
       </div>
     </div>
-    <div class='panel'>
+    <div class='panel' id='panel4'>
       <div>
+        <a href='' rel='form'>Siguiente</a>
         <img src='upload/products/4.jpg' />
       </div>
     </div>
-    <div class='panel'>
+    <div class='panel' id='form'>
+      <a href='' rel='home'>Inicio</a>
       <div class='subscribe'>
         <h2>&iexcl;Subscribite!</h2>
         <h3>y te enviaremos novedades una vez por mes, no molestamos :)</h3>
