--- a/index.html
+++ b/index.html
@@ -8,52 +8,92 @@
   <script src='js/mootor.js' type='text/javascript'></script>
 </head>
 <body class='main'>
+  <div id='header'>
+    <!-- header content -->
+  </div>
   <div id='panels'>
     <div class='panel' id='home'>
-      <div class='content'>
-        <h2>Pink Floyd</h2>
-        <h3>1965 - 1995</h3>
-        <a href='' rel='form'>Subscripcion</a>
-        <a href='' rel='panel1'>Siguiente</a>
+      <div class='nav' id='nav'>
+        <li>
+          <a href='' rel='carousel'>Carousel</a>
+        </li>
+        <li>
+          <a href='' rel='geo'>Geo</a>
+        </li>
+        <li>
+          <a href='' rel='video'>Video</a>
+        </li>
+        <li>
+          <a href='' rel='audio'>Audio</a>
+        </li>
+        <li>
+          <a href='' rel='form'>Form</a>
+        </li>
+        <li>
+          <a href='' rel='graph'>Graph</a>
+        </li>
       </div>
     </div>
-    <div class='panel' id='panel1'>
+    <div class='panel' id='carousel'>
       <div>
-        <a href='' rel='panel2'>Siguiente</a>
-        <img src='upload/products/1.jpg' />
+        <h2>Carousel</h2>
+        <h3>This module is not implemented yet.</h3>
+        <h3>
+          <a href='' rel='home'>< Back</a>
+        </h3>
       </div>
     </div>
-    <div class='panel' id='panel2'>
+    <div class='panel' id='geo'>
       <div>
-        <a href='' rel='panel3'>Siguiente</a>
-        <img src='upload/products/2.jpg' />
+        <h2>Geo</h2>
+        <h3>This module is not implemented yet.</h3>
+        <h3>
+          <a href='' rel='home'>< Back</a>
+        </h3>
       </div>
     </div>
-    <div class='panel' id='panel3'>
+    <div class='panel' id='video'>
       <div>
-        <a href='' rel='panel4'>Siguiente</a>
-        <img src='upload/products/3.jpg' />
+        <h2>Video</h2>
+        <h3>This module is not implemented yet.</h3>
+        <h3>
+          <a href='' rel='home'>< Back</a>
+        </h3>
       </div>
     </div>
-    <div class='panel' id='panel4'>
+    <div class='panel' id='audio'>
       <div>
-        <a href='' rel='form'>Siguiente</a>
-        <img src='upload/products/4.jpg' />
+        <h2>Audio</h2>
+        <h3>This module is not implemented yet.</h3>
+        <h3>
+          <a href='' rel='home'>< Back</a>
+        </h3>
       </div>
     </div>
     <div class='panel' id='form'>
-      <a href='' rel='home'>Inicio</a>
+      <h3>
+        <a href='' rel='home'>< Back</a>
+      </h3>
       <div class='subscribe'>
-        <h2>&iexcl;Subscribite!</h2>
-        <h3>y te enviaremos novedades una vez por mes, no molestamos :)</h3>
+        <h2>Form</h2>
+        <h3>Subscribe to receive news about this product!</h3>
         <form class='form' id='suscribeForm'>
           <div class='field text'>
-            <input id='fieldEmail' type='text' value='correo electrónico' />
+            <input id='fieldEmail' type='text' value='e-mail' />
           </div>
           <div class='action subscribe'>
-            <input id='suscribeBtn' type='submit' value='Suscribirse' />
+            <input id='suscribeBtn' type='submit' value='Subscribe' />
           </div>
         </form>
+      </div>
+    </div>
+    <div class='panel' id='graph'>
+      <div>
+        <h2>Graph</h2>
+        <h3>This module is not implemented yet.</h3>
+        <h3>
+          <a href='' rel='home'>< Back</a>
+        </h3>
       </div>
     </div>
   </div>
