--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <head>
-  <title>Subscripción</title>
+  <title>Subscription</title>
   <meta content='initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' name='viewport' />
   <link href='css/styles.css' media='screen' rel='stylesheet' />
   <script src='js/mootor.js' type='text/javascript'></script>
@@ -14,7 +14,7 @@
     <div class='panel' id='home'>
       <div class='nav' id='nav'>
         <li>
-          <a href='' rel='carousel'>Carousel</a>
+          <a href='' rel='text'>Text</a>
         </li>
         <li>
           <a href='' rel='geo'>Geo</a>
@@ -33,30 +33,49 @@
         </li>
       </div>
     </div>
-    <div class='panel' id='carousel'>
+    <div class='panel' id='text'>
       <div>
-        <h2>Carousel</h2>
-        <h3>This module is not implemented yet.</h3>
+        <h2>Text</h2>
+        <h3>Lorem ipsum dolor sit amet.</h3>
         <h3>
           <a href='' rel='home'>< Back</a>
         </h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum lobortis erat, vel facilisis massa facilisis non. Sed condimentum massa vitae augue tincidunt id ornare sapien congue. Maecenas pulvinar faucibus lorem. Sed tempus, sem gravida tempus malesuada, lacus lectus lacinia libero, id venenatis eros sapien et nunc. Cras quis urna mauris, non auctor risus. Suspendisse non magna augue, in elementum augue. Donec tincidunt sodales imperdiet. Ut pharetra, nunc in pretium rutrum, eros velit rhoncus est, nec faucibus ante arcu vitae enim. Nam sit amet nulla in risus blandit aliquet. Quisque rutrum accumsan volutpat.
+        </p>
+        <p>
+          Duis vitae enim nunc. Praesent vitae porttitor enim. Nunc augue turpis, luctus id gravida vitae, eleifend ut sem. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce vitae dui scelerisque turpis bibendum placerat. Sed venenatis tincidunt ornare. Integer mauris velit, consectetur id fermentum nec, varius sed quam. Sed convallis tortor est, vel vehicula ipsum. Aliquam erat volutpat. Proin porttitor semper turpis. Phasellus turpis purus, tincidunt nec dignissim non, posuere id dui.
+        </p>
+        <p>
+          Mauris feugiat aliquam erat vitae faucibus. Donec in semper felis. Nam aliquet fermentum porta. Morbi imperdiet orci at justo sagittis egestas. Phasellus vel pharetra quam. Vestibulum volutpat nisi sit amet mi blandit vitae commodo dui posuere. Mauris augue est, semper a tempus vitae, vulputate non odio. Quisque tincidunt, dolor at commodo ornare, nisl risus tristique dolor, non imperdiet libero ligula vel magna. Nullam id massa neque. Maecenas porttitor dignissim massa, nec euismod augue scelerisque nec. Nam commodo eleifend lacinia. Nullam at tincidunt est. Donec pellentesque convallis arcu et molestie. Cras ultrices sem non risus sagittis sed pellentesque quam sodales. Phasellus dui justo, lobortis eu hendrerit sit amet, faucibus non nisl. Ut non lectus metus, nec gravida orci.
+        </p>
+        <p>
+          Mauris leo sem, venenatis eu laoreet eget, adipiscing sit amet leo. Integer consequat, leo sed congue vestibulum, nulla nunc tempor eros, a tincidunt magna quam non enim. In non sapien velit. Suspendisse gravida congue nisi id pellentesque. Morbi nulla elit, dignissim nec vestibulum in, elementum eget nunc. Nulla fermentum iaculis metus sit amet sagittis. In egestas faucibus mattis. Nulla non metus est, ac adipiscing ligula. Integer quis purus erat. Nullam at diam lectus. Maecenas laoreet sapien sit amet magna varius laoreet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+        </p>
+        <p>
+          Mauris aliquam nunc a augue malesuada vel congue nunc cursus. Proin pellentesque diam iaculis sapien convallis ac sagittis sem feugiat. Ut ac iaculis neque. Curabitur vel felis non nisi rhoncus mollis suscipit quis nisi. Integer vitae augue at lorem pellentesque placerat. Donec ac nibh id massa malesuada adipiscing. Cras egestas, ligula eget tempor sagittis, metus arcu convallis orci, vehicula tempor arcu tortor quis dolor. Nullam facilisis iaculis magna sed suscipit.
+        </p>
       </div>
     </div>
     <div class='panel' id='geo'>
       <div>
-        <h2>Geo</h2>
         <h3>
           <a href='' rel='home'>< Back</a>
         </h3>
+        <div class='iframe' style='display: none'>
+          <img src='http://maps.google.com/maps/api/staticmap?center=Colegiales,Buenos%20Aires&amp;zoom=14&amp;size=768x1024&amp;sensor=false' />
+        </div>
       </div>
     </div>
     <div class='panel' id='video'>
       <div>
         <h2>Video</h2>
-        <h3>This module is not implemented yet.</h3>
         <h3>
           <a href='' rel='home'>< Back</a>
         </h3>
+        <div class='iframe' style='display: none'>
+          <iframe width="100%" height="400px" src="http://www.youtube.com/embed/FNcgXMW3_0M" frameborder="0" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
     <div class='panel' id='audio'>
