Bug fixes on Nav.panels
- Load panels more than once was buggy.

--- a/index.html
+++ b/index.html
@@ -12,25 +12,27 @@
   </div>
   <div id='panels'>
     <div class='panel' id='home'>
-      <div class='nav' id='nav'>
-        <li>
-          <a href='' rel='text'>Text</a>
-        </li>
-        <li>
-          <a href='' rel='geo'>Geo</a>
-        </li>
-        <li>
-          <a href='' rel='video'>Video</a>
-        </li>
-        <li>
-          <a href='' rel='audio'>Audio</a>
-        </li>
-        <li>
-          <a href='' rel='form'>Form</a>
-        </li>
-        <li>
-          <a href='' rel='graph'>Graph</a>
-        </li>
+      <div>
+        <div class='nav' id='nav'>
+          <li>
+            <a href='' rel='text'>Text</a>
+          </li>
+          <li>
+            <a href='' rel='geo'>Geo</a>
+          </li>
+          <li>
+            <a href='' rel='video'>Video</a>
+          </li>
+          <li>
+            <a href='' rel='audio'>Audio</a>
+          </li>
+          <li>
+            <a href='' rel='form'>Form</a>
+          </li>
+          <li>
+            <a href='' rel='graph'>Graph</a>
+          </li>
+        </div>
       </div>
     </div>
     <div class='panel' id='text'>
@@ -112,17 +114,19 @@
       </div>
     </div>
     <div class='panel' id='form'>
-      <div class='subscribe'>
-        <h2>Form</h2>
-        <h3>Subscribe to receive news about this product!</h3>
-        <form class='form' id='suscribeForm'>
-          <div class='field text'>
-            <input id='fieldEmail' type='text' value='e-mail' />
-          </div>
-          <div class='action subscribe'>
-            <input id='suscribeBtn' type='submit' value='Subscribe' />
-          </div>
-        </form>
+      <div>
+        <div class='subscribe'>
+          <h2>Form</h2>
+          <h3>Subscribe to receive news about this product!</h3>
+          <form class='form' id='suscribeForm'>
+            <div class='field text'>
+              <input id='fieldEmail' type='text' value='e-mail' />
+            </div>
+            <div class='action subscribe'>
+              <input id='suscribeBtn' type='submit' value='Subscribe' />
+            </div>
+          </form>
+        </div>
       </div>
     </div>
     <div class='panel' id='graph'>
