--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta content='initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' name='viewport' />
   <link href='css/styles.css' media='screen' rel='stylesheet' />
   <script src='js/mootor.js' type='text/javascript'></script>
+  <script src='js/dtype.js' type='text/javascript'></script>
 </head>
 <body class='main'>
   <div id='header'>
