--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link href='css/styles.css' media='screen' rel='stylesheet' />
   <script src='js/mootor.js' type='text/javascript'></script>
   <script src='js/dtype.js' type='text/javascript'></script>
-  <script src='js/geo.js' type='text/javascript'></script>
-  <script src='http://maps.google.com/maps/api/js?sensor=false' type='text/javascript'></script>
+  <!-- %script{:src=>"js/geo.js",:type=>"text/javascript"} -->
+  <!-- %script{:src=>"http://maps.google.com/maps/api/js?sensor=false",:type=>"text/javascript"} -->
 </head>
 <body class='main'>
   <div id='header'>
@@ -53,12 +53,15 @@
       </p>
     </div>
     <div class='panel' id='geo'>
+      <h2>Geo</h2>
+      <h3>This module is not activated.</h3>
       <div class='hidden' id='map'></div>
     </div>
     <div class='panel' id='video'>
       <h2>Video</h2>
+      <h3>This module is not activated.</h3>
       <div class='hidden'>
-        <iframe src="http://player.vimeo.com/video/35820201?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=0" width="400" height="225" frameborder="0" webkitAllowFullScreen allowFullScreen></iframe>
+        <!-- <iframe src="http://player.vimeo.com/video/35820201?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=0" width="400" height="225" frameborder="0" webkitAllowFullScreen allowFullScreen></iframe> -->
       </div>
     </div>
     <div class='panel' id='carousel'>
@@ -129,7 +132,7 @@
            panels.panels();
            
            // Show location map
-           $("#map").map();
+           // $("#map").map();
     
        });
   //]]>
