--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link href='css/styles.css' media='screen' rel='stylesheet' />
   <script src='js/mootor.js' type='text/javascript'></script>
   <script src='js/dtype.js' type='text/javascript'></script>
-  <!-- %script{:src=>"js/geo.js",:type=>"text/javascript"} -->
-  <!-- %script{:src=>"http://maps.google.com/maps/api/js?sensor=false",:type=>"text/javascript"} -->
+  <script src='js/geo.js' type='text/javascript'></script>
+  <script src='http://maps.google.com/maps/api/js?sensor=false' type='text/javascript'></script>
 </head>
 <body class='main'>
   <div id='header'>
@@ -53,8 +53,6 @@
       </p>
     </div>
     <div class='panel' id='geo'>
-      <h2>Geo</h2>
-      <h3>This module is not activated.</h3>
       <div class='hidden' id='map'></div>
     </div>
     <div class='panel' id='video'>
@@ -132,7 +130,7 @@
            panels.panels();
            
            // Show location map
-           // $("#map").map();
+           $("#map").map();
     
        });
   //]]>
