--- a/_demo/index.html
+++ b/_demo/index.html
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <head>
-  <title>Todo Macram&eacute;</title>
+  <title>Demo app</title>
   <meta content='initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' name='viewport' />
   <link href='../css/styles.css' media='screen' rel='stylesheet' />
   <link href='css/styles.css' media='screen' rel='stylesheet' />
@@ -98,7 +98,7 @@
        $(document).ready(function(){
        
            $("#panels").panels({
-                width: "400",
+                width: 400,
                 navmain:  $("#sidebar").el
            })
                      
