HTML demo update.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h2>Video</h2>
       <h3>This module is not activated.</h3>
       <div class='hidden'>
-        <!-- <iframe src="http://player.vimeo.com/video/35820201?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=0" width="400" height="225" frameborder="0" webkitAllowFullScreen allowFullScreen></iframe> -->
+        <iframe class="youtube-player" type="text/html" width="320" height="200" src="http://www.youtube.com/embed/mzPxo7Y6JyA" frameborder="0"></iframe>
       </div>
     </div>
     <div class='panel' id='carousel'>
