--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <?xml version='1.0' encoding='utf-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <head>
-  <title>Subscription</title>
+  <title>Mootor demo</title>
   <meta content='initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' name='viewport' />
   <link href='css/styles.css' media='screen' rel='stylesheet' />
   <script src='js/mootor.js' type='text/javascript'></script>
-  <script src='js/dtype.js' type='text/javascript'></script>
+  <script src='js/type.js' type='text/javascript'></script>
   <script src='js/geo.js' type='text/javascript'></script>
   <script src='http://maps.google.com/maps/api/js?sensor=false' type='text/javascript'></script>
 </head>
@@ -43,9 +43,8 @@
     </div>
     <div class='panel' id='video'>
       <h2>Video</h2>
-      <h3>This module is not activated.</h3>
       <div class='hidden'>
-        <iframe class="youtube-player" type="text/html" width="320" height="200" src="http://www.youtube.com/embed/mzPxo7Y6JyA" frameborder="0"></iframe>
+        <!-- <iframe class="youtube-player" type="text/html" width="320" height="200" src="http://www.youtube.com/embed/mzPxo7Y6JyA" frameborder="0"></iframe> -->
       </div>
     </div>
     <div class='panel' id='carousel'>
