--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link href='css/styles.css' media='screen' rel='stylesheet' />
   <script src='js/mootor.js' type='text/javascript'></script>
   <script src='js/type.js' type='text/javascript'></script>
-  <script src='js/geo.js' type='text/javascript'></script>
-  <script src='http://maps.google.com/maps/api/js?sensor=false' type='text/javascript'></script>
+  <!-- %script{:src=>"js/geo.js",:type=>"text/javascript"} -->
+  <!-- %script{:src=>"http://maps.google.com/maps/api/js?sensor=false",:type=>"text/javascript"} -->
 </head>
 <body class='main'>
   <div id='header'>
@@ -120,7 +120,7 @@
            });
                       
            // Show location map
-           $("#map").map();
+           // $("#map").map();
     
        });
   //]]>
