Fixes, Geo plugin temporary disabled.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
       </p>
     </div>
     <div class='panel' id='geo'>
-      <div class='hidden' id='map'></div>
+      <h2>Geo</h2>
+      <h3>This module is not enabled.</h3>
+      <!-- #map.hidden -->
     </div>
     <div class='panel' id='video'>
       <h2>Video</h2>
@@ -120,7 +122,7 @@
            });
                       
            // Show location map
-           // $("#map").map();
+           $("#map").map();
     
        });
   //]]>
