--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
            });
                       
            // Show location map
-           $("#map").map();
+           // $("#map").map();
     
        });
   //]]>
