Nav.panels improvements.
- Go forward and go back

--- a/index.html
+++ b/index.html
@@ -28,16 +28,25 @@
     </div>
     <div class='panel' id='nav'>
       <nav>
-        <a class='nav' href='' id='item1' rel='item1'>Item 1</a>
-        <a class='nav' href='' id='item2' rel='item1'>Item 2</a>
-        <a class='nav' href='' id='item3' rel='item1'>Item 3</a>
-        <a class='nav' href='' id='item4' rel='item1'>Item 4</a>
-        <a class='nav' href='' id='item5' rel='item1'>Item 5</a>
-        <a class='nav' href='' id='item6' rel='item1'>Item 6</a>
+        <a class='nav' href='' rel='item1'>Item 1</a>
+        <a class='nav' href='' rel='item2'>Item 2</a>
+        <a class='nav' href='' rel='item3'>Item 3</a>
       </nav>
     </div>
     <div class='panel' id='item1'>
       <h2>Item 1</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum lobortis erat, vel facilisis massa facilisis non. Sed condimentum massa vitae augue tincidunt id ornare sapien congue. Maecenas pulvinar faucibus lorem. Sed tempus, sem gravida tempus malesuada, lacus lectus lacinia libero, id venenatis eros sapien et nunc. Cras quis urna mauris, non auctor risus. Suspendisse non magna augue, in elementum augue. Donec tincidunt sodales imperdiet. Ut pharetra, nunc in pretium rutrum, eros velit rhoncus est, nec faucibus ante arcu vitae enim. Nam sit amet nulla in risus blandit aliquet. Quisque rutrum accumsan volutpat.
+      </p>
+    </div>
+    <div class='panel' id='item2'>
+      <h2>Item 2</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum lobortis erat, vel facilisis massa facilisis non. Sed condimentum massa vitae augue tincidunt id ornare sapien congue. Maecenas pulvinar faucibus lorem. Sed tempus, sem gravida tempus malesuada, lacus lectus lacinia libero, id venenatis eros sapien et nunc. Cras quis urna mauris, non auctor risus. Suspendisse non magna augue, in elementum augue. Donec tincidunt sodales imperdiet. Ut pharetra, nunc in pretium rutrum, eros velit rhoncus est, nec faucibus ante arcu vitae enim. Nam sit amet nulla in risus blandit aliquet. Quisque rutrum accumsan volutpat.
+      </p>
+    </div>
+    <div class='panel' id='item3'>
+      <h2>Item 3</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum lobortis erat, vel facilisis massa facilisis non. Sed condimentum massa vitae augue tincidunt id ornare sapien congue. Maecenas pulvinar faucibus lorem. Sed tempus, sem gravida tempus malesuada, lacus lectus lacinia libero, id venenatis eros sapien et nunc. Cras quis urna mauris, non auctor risus. Suspendisse non magna augue, in elementum augue. Donec tincidunt sodales imperdiet. Ut pharetra, nunc in pretium rutrum, eros velit rhoncus est, nec faucibus ante arcu vitae enim. Nam sit amet nulla in risus blandit aliquet. Quisque rutrum accumsan volutpat.
       </p>
