Restore Geo demo.

--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
     </div>
     <div class='panel' id='video'>
       <h2>Video</h2>
-      <div class='hidden'>
-        <!-- <iframe class="youtube-player" type="text/html" width="320" height="200" src="http://www.youtube.com/embed/mzPxo7Y6JyA" frameborder="0"></iframe> -->
-      </div>
+      <h3>This module is not implemented yet.</h3>
     </div>
     <div class='panel' id='carousel'>
       <h2>Carousel</h2>
