--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <div class='panel' id='home'>
       <nav>
         <a class='nav' href='' rel='nav'>Nav</a>
+        <a class='nav' href='' rel='ui'>UI</a>
         <a class='nav' href='' rel='geo'>Geo</a>
-        <a class='nav' href='' rel='video'>Video</a>
-        <a class='nav' href='' rel='carousel'>Carousel</a>
-        <a class='nav' href='' rel='form'>Form</a>
+        <a class='nav' href='' rel='data'>Data</a>
         <a class='nav' href='' rel='graph'>Graph</a>
+        <a class='nav' href='' rel='carousel'>Carousel</a>
       </nav>
     </div>
     <div class='panel' id='nav'>
@@ -46,20 +46,29 @@
       </p>
     </div>
     <div class='panel' id='item3'>
-      <h2>Item 3</h2>
+      <nav>
+        <a class='nav' href='' rel='item4'>Item 4</a>
+      </nav>
+    </div>
+    <div class='panel' id='item4'>
+      <h2>Item 4</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum lobortis erat, vel facilisis massa facilisis non. Sed condimentum massa vitae augue tincidunt id ornare sapien congue. Maecenas pulvinar faucibus lorem. Sed tempus, sem gravida tempus malesuada, lacus lectus lacinia libero, id venenatis eros sapien et nunc. Cras quis urna mauris, non auctor risus. Suspendisse non magna augue, in elementum augue. Donec tincidunt sodales imperdiet. Ut pharetra, nunc in pretium rutrum, eros velit rhoncus est, nec faucibus ante arcu vitae enim. Nam sit amet nulla in risus blandit aliquet. Quisque rutrum accumsan volutpat.
       </p>
     </div>
+    <div class='panel' id='ui'>
+      <h2>UI</h2>
+      <h3>This module is not implemented yet.</h3>
+    </div>
     <div class='panel' id='geo'>
       <div class='hidden' id='map'></div>
     </div>
-    <div class='panel' id='video'>
-      <h2>Video</h2>
+    <div class='panel' id='data'>
+      <h2>Data</h2>
       <h3>This module is not implemented yet.</h3>
     </div>
-    <div class='panel' id='carousel'>
-      <h2>Carousel</h2>
+    <div class='panel' id='graph'>
+      <h2>Graph</h2>
       <h3>This module is not implemented yet.</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum lobortis erat, vel facilisis massa facilisis non. Sed condimentum massa vitae augue tincidunt id ornare sapien congue. Maecenas pulvinar faucibus lorem. Sed tempus, sem gravida tempus malesuada, lacus lectus lacinia libero, id venenatis eros sapien et nunc. Cras quis urna mauris, non auctor risus. Suspendisse non magna augue, in elementum augue. Donec tincidunt sodales imperdiet. Ut pharetra, nunc in pretium rutrum, eros velit rhoncus est, nec faucibus ante arcu vitae enim. Nam sit amet nulla in risus blandit aliquet. Quisque rutrum accumsan volutpat.
@@ -77,22 +86,8 @@
         Mauris aliquam nunc a augue malesuada vel congue nunc cursus. Proin pellentesque diam iaculis sapien convallis ac sagittis sem feugiat. Ut ac iaculis neque. Curabitur vel felis non nisi rhoncus mollis suscipit quis nisi. Integer vitae augue at lorem pellentesque placerat. Donec ac nibh id massa malesuada adipiscing. Cras egestas, ligula eget tempor sagittis, metus arcu convallis orci, vehicula tempor arcu tortor quis dolor. Nullam facilisis iaculis magna sed suscipit.
       </p>
     </div>
-    <div class='panel' id='form'>
-      <div class='subscribe'>
-        <h2>Form</h2>
-        <h3>This module is not implemented yet.</h3>
-        <form class='form' id='suscribeForm'>
-          <div class='field text'>
-            <input id='fieldEmail' type='text' value='e-mail' />
-          </div>
-          <div class='action subscribe'>
-            <input id='suscribeBtn' type='submit' value='Subscribe' />
-          </div>
-        </form>
-      </div>
-    </div>
-    <div class='panel' id='graph'>
-      <h2>Graph</h2>
+    <div class='panel' id='carousel'>
+      <h2>Carousel</h2>
       <h3>This module is not implemented yet.</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dictum lobortis erat, vel facilisis massa facilisis non. Sed condimentum massa vitae augue tincidunt id ornare sapien congue. Maecenas pulvinar faucibus lorem. Sed tempus, sem gravida tempus malesuada, lacus lectus lacinia libero, id venenatis eros sapien et nunc. Cras quis urna mauris, non auctor risus. Suspendisse non magna augue, in elementum augue. Donec tincidunt sodales imperdiet. Ut pharetra, nunc in pretium rutrum, eros velit rhoncus est, nec faucibus ante arcu vitae enim. Nam sit amet nulla in risus blandit aliquet. Quisque rutrum accumsan volutpat.
