Mootor.UI - Switch control implementation
- Functional switch control
- Basic styles & sample image

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <div id='panels'>
     <div class='panel' id='ui'>
       <h2>User Interface</h2>
-      <form action='' id='uiform' method='post'>
+      <form action='' class='stdform' id='uiform' method='post'>
         <div class='field' id='checkbox1'>
-          <input type='checkbox' value='0' />
+          <input checked='true' id='check1' name='checkbox1' type='checkbox' value='0' />
           <label>Input checkbox</label>
         </div>
       </form>
