Bug fixes. Gestures, UI
- Switch gestures events
- Gesture.createKey was buggy, fixed

--- a/index.html
+++ b/index.html
@@ -17,15 +17,6 @@
     </nav>
   </div>
   <div id='panels'>
-    <div class='panel' id='ui'>
-      <h2>User Interface</h2>
-      <form action='' class='stdform' id='uiform' method='post'>
-        <div class='field' id='checkbox1'>
-          <input checked='true' id='check1' name='checkbox1' type='checkbox' value='0' />
-          <label>Input checkbox</label>
-        </div>
-      </form>
-    </div>
     <div class='panel' id='home'>
       <nav>
         <a class='nav' href='' rel='nav'>Nav</a>
@@ -35,6 +26,17 @@
         <a class='nav' href='' rel='graph'>Graph</a>
         <a class='nav' href='' rel='carousel'>Carousel</a>
       </nav>
+    </div>
+    <div class='panel' id='ui'>
+      <h2>User Interface</h2>
+      <div class='hidden'>
+        <form action='' class='stdform' id='uiform' method='post'>
+          <div class='field' id='checkbox1'>
+            <input checked='true' id='check1' name='checkbox1' type='checkbox' value='0' />
+            <label>Input checkbox</label>
+          </div>
+        </form>
+      </div>
     </div>
     <div class='panel' id='nav'>
       <nav>
