Fixes. UI switch
- Initial state
- Update input

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class='hidden'>
         <form action='' class='stdform' id='uiform' method='post'>
           <div class='field' id='checkbox1'>
-            <input checked='true' id='check1' name='checkbox1' type='checkbox' value='0' />
+            <input id='check1' name='checkbox1' type='checkbox' value='0' />
             <label>Input checkbox</label>
           </div>
         </form>
