--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src='js/mootor.js' type='text/javascript'></script>
   <script src='js/type.js' type='text/javascript'></script>
   <script src='js/ui.js' type='text/javascript'></script>
+  <script src='js/nav.js' type='text/javascript'></script>
   <!-- %script{:src=>"http://maps.google.com/maps/api/js?sensor=false",:type=>"text/javascript"} -->
   <!-- %script{:src=>"js/geo.js",:type=>"text/javascript"} -->
 </head>
@@ -110,7 +111,7 @@
        $(document).ready(function(){
        
            // Dynamic font size
-           $("#panels").type.autoSize();
+           $("#panels").autoType();
     
            // Navigation panels
            var nav = $("#panels").nav();
