--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <!-- %script{:src=>"js/geo.js",:type=>"text/javascript"} -->
 </head>
 <body class='main'>
-  <div id='header'>
+  <header id='header'>
     <h1>Mootor demo</h1>
     <nav>
       <a class='nav' href='' rel='back'>Back</a>
     </nav>
-  </div>
+  </header>
   <div id='panels'>
     <div class='panel' id='home'>
       <nav>
