BDD tests, Core: return this, $().html, Geo: geocoding, Nav: return this

--- a/_source/tests/SpecRunner.html
+++ b/_source/tests/SpecRunner.html
@@ -8,7 +8,7 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../../js/mootor.js"></script>
- <!-- <script type="text/javascript" src="../../js/geo.js"></script> -->
+  <script type="text/javascript" src="../../js/geo.js"></script>
   <script type="text/javascript" src="../../js/nav.js"></script>
 
   <script type="text/javascript" src="lib/jasmine-1.0.2/jasmine.js"></script>
@@ -20,9 +20,14 @@
   <script type="text/javascript" src="spec/FxSpec.js"></script>
   <script type="text/javascript" src="spec/GesturesSpec.js"></script>
   <script type="text/javascript" src="spec/NavSpec.js"></script>
-  <!-- <script type="text/javascript" src="spec/LocationSpec.js"></script> -->
+  <script type="text/javascript" src="spec/LocationSpec.js"></script>
 
 </head>
+<style>
+    body {
+        overflow: auto !important;
+    }
+</style>
 <body>
 <div style="display:none !important">
     <div class="main" id="main">
