--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Mootor demo</title>
   <meta content='initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' name='viewport' />
-  <link href='css/mootor.css' media='screen' rel='stylesheet' />
+  <!-- %link{:href=>"css/mootor.css", :media=>"screen",  :rel=>"stylesheet"} -->
   <link href='css/styles.css' media='screen' rel='stylesheet' />
   <script src='js/mootor.js' type='text/javascript'></script>
   <script src='js/type.js' type='text/javascript'></script>
