--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-<?xml version='1.0' encoding='utf-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <head>
   <title>Mootor demo</title>
   <meta content='initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' name='viewport' />
-  <link href='css/mootor.css' media='screen' rel='stylesheet' />
   <link href='css/styles.css' media='screen' rel='stylesheet' />
   <script src='js/mootor.js' type='text/javascript'></script>
   <script src='js/type.js' type='text/javascript'></script>
